--- a/account.html
+++ b/account.html
@@ -68,7 +68,7 @@
 
         <div class="right">
           <button class="social google">
-            <img src="images.google.png" alt="Google" id="gog" class="icon" />
+            <img src="images/google.png" alt="Google" id="gog" class="icon" />
             Sign up with Google
           </button>
           <button class="social facebook">
@@ -121,3 +121,4 @@
     <script src="account.js"></script>
   </body>
 </html>
+
